add error prone + remove Q description in condy lisp